corrected spacing on project images

--- a/src/screens/Projects/Projects.css
+++ b/src/screens/Projects/Projects.css
@@ -1,30 +1,31 @@
 @media only screen and (min-width: 851px) {
   .projects-page-wrapper .projects-wrapper {
-    /* height: 80vh;
-    width: 80vw; */
-    /* margin-top: 7%;
+    height: 80vh;
+    width: 80vw; 
+    margin-top: 7%;
     margin-left: 30%;
-     */
-    /* gap: 1%; */
-    font-size: 16px;
   }
 
   .project-wrapper {
     display: grid;
     grid-template-rows: (2, 1fr);
     grid-template-columns: repeat(4, 1fr);
-    margin-top: 5%;
-    margin-left: 20%;
+    margin-top: 3%;
+    margin-left: 15%;
     margin-bottom: 15%;
     width: 70vw;
     height: 70vh;
-    gap: 2%;
     position: absolute;
   }
 
   #proj-img {
     height: 100%;
     width: 100%;
+    margin: 1%;
+  }
+
+  .proj-img {
+    margin: 3%;
   }
 
   .proj-img1 {
@@ -68,7 +69,7 @@
 } */
 
   .proj-img1:hover {
-    box-shadow: 0 0 0 600px rgba(238, 4, 4, 0.9) inset;
+    box-shadow: 0 0 0 1200px rgba(238, 4, 4, 0.9) inset;
   }
 
   .project-wrapper p {
